[badge/dynamic/json] User defined JSON source badge (#820)
* Add User Defined URL support

* Add test

* eslint fixes

* 100% coverage

* use JSONpath

* update try.html

* Update tests, restore prefix & suffix

* order dependencies alphabetically

* update jsonpath version dependency

* update url structure & move to query strings

* update error handling & remove xml refrences

* fix eslint errors

* update tests

* update dynamic badge generator

* url -> uri & decode uri

Allow an encoded url to be used.
needed for any uri that requires params in the address

* resolve conflicts

* update for new page generation

* check uri is defined

* add query params to `request-handler.js`

* eslint fixes

* add test for no uri specified

* move query params to be local to dynamic badge

* update tests

* dynamic badge gen use same base url as static badge

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dot": "~1.1.2",
     "gm": "^1.23.0",
     "json-autosave": "~1.1.2",
+    "jsonpath": "~0.2.12",
     "lodash.countby": "^4.6.0",
     "moment": "^2.18.1",
     "pdfkit": "~0.8.0",
