Add an integration test

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint '**/*.js'",
     "test:js": "mocha '*.spec.js' 'lib/**/*.spec.js'",
+    "test:integration": "mocha 'lib/**/*.integration.js'",
     "test:services": "mocha --delay service-tests/runner/cli.js",
     "test:services:pr:prepare": "node service-tests/runner/pull-request-services-cli.js > pull-request-services.log",
     "test:services:pr:run": "mocha --delay service-tests/runner/cli.js --stdin < pull-request-services.log",
@@ -110,6 +111,7 @@
     "opn-cli": "^3.1.0",
     "prettier": "1.7.4",
     "pretty": "^2.0.0",
+    "promise-map-series": "^0.2.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "read-all-stdin-sync": "^1.0.5",
