Using lodash.mapvalues in tests

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "is-png": "^1.1.0",
     "is-svg": "^2.1.0",
     "lodash.difference": "^4.5.0",
+    "lodash.mapvalues": "^4.6.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
