Fix `’INFOSITE' is not recognized` in `npm start` on Windows
Fix #1259

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "build": "npm run build:examples && npm run build:copy-fragments && npm run build:concat",
     "build:production": "PRODUCTION_BUILD=true npm run build:examples && npm run build:copy-fragments && make footer-production-transform && npm run build:concat",
     "heroku-postbuild": "npm run build",
-    "start": "INFOSITE=/ node server 8080 ::"
+    "start": "cross-env INFOSITE=/ node server 8080 ::"
   },
   "bin": {
     "badge": "lib/badge-cli.js"
@@ -82,6 +82,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.11.1",
     "child-process-promise": "^2.2.1",
+    "cross-env": "^5.1.1",
     "dejavu-fonts-ttf": "^2.37.3",
     "eslint": "^4.8.0",
     "eslint-config-prettier": "^2.6.0",
