--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "json-autosave": "~1.1.2",
     "jsonpath": "~0.2.12",
     "lodash.countby": "^4.6.0",
+    "lodash.mapkeys": "^4.6.0",
     "moment": "^2.18.1",
+    "node-env-flag": "^0.1.0",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
     "query-string": "^5.0.0",
@@ -103,7 +105,6 @@
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "nock": "^9.0.13",
-    "node-env-flag": "^0.1.0",
     "node-fetch": "^1.6.3",
     "nyc": "^11.2.1",
     "opn-cli": "^3.1.0",
