--- a/shields.example.env
+++ b/shields.example.env
@@ -1,7 +1,7 @@
 # Base URL for redirects etc.
 BASE_URL=http://localhost:8080
-# Where your homepage is
-INFOSITE=http://localhost:8080/
+# Where your homepage is, if different
+# FRONTEND_REDIRECT_URL=http://other-server:8080/
 
 # GitHub settings
 GITHUB_URL=https://api.github.com
