--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "build": "npm run build:examples && npm run build:copy-fragments && npm run build:concat",
     "build:production": "PRODUCTION_BUILD=true npm run build:examples && npm run build:copy-fragments && make footer-production-transform && npm run build:concat",
     "heroku-postbuild": "npm run build",
+    "start:frontend": "next dev",
     "start": "INFOSITE=/ node server 8080 ::"
   },
   "bin": {
@@ -77,16 +78,14 @@
     "logo"
   ],
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.11.1",
+    "@mapbox/react-click-to-select": "git+https://github.com/paulmelnikow/react-click-to-select.git#eda55f0164aeed99b83c4d621b0789b03c7b0f42",
     "child-process-promise": "^2.2.1",
     "dejavu-fonts-ttf": "^2.37.3",
     "eslint": "^4.8.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-jsx": "^4.0.2",
+    "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-prettier": "^2.3.1",
@@ -98,10 +97,12 @@
     "icedfrisby-nock": "^1.0.0",
     "is-png": "^1.1.0",
     "is-svg": "^2.1.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.difference": "^4.5.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
+    "next": "^4.1.4",
     "nock": "^9.0.13",
     "node-env-flag": "^0.1.0",
     "node-fetch": "^1.6.3",
@@ -109,8 +110,10 @@
     "opn-cli": "^3.1.0",
     "prettier": "1.7.4",
     "pretty": "^2.0.0",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-modal": "^3.1.2",
     "read-all-stdin-sync": "^1.0.5",
     "rimraf": "^2.6.2",
     "sazerac": "^0.4.1",
@@ -120,11 +123,5 @@
   "engines": {
     "node": "6.x",
     "npm": "5.x"
-  },
-  "babel": {
-    "presets": [
-      "react",
-      "env"
-    ]
   }
 }
