--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   ],
   "devDependencies": {
     "@mapbox/react-click-to-select": "git+https://github.com/paulmelnikow/react-click-to-select.git#eda55f0164aeed99b83c4d621b0789b03c7b0f42",
+    "babel-eslint": "^8.0.2",
     "child-process-promise": "^2.2.1",
     "dejavu-fonts-ttf": "^2.37.3",
     "eslint": "^4.8.0",
