--- a/package.json
+++ b/package.json
@@ -53,14 +53,16 @@
     "test:services:pr:run": "mocha --delay service-tests/runner/cli.js --stdin < pull-request-services.log",
     "test:services:pr": "npm run test:services:pr:prepare && npm run test:services:pr:run",
     "test": "npm run lint && npm run test:js",
-    "prebuild:examples": "mkdirp build",
-    "build:examples": "node_modules/.bin/babel-node frontend/render-badge-examples",
-    "build:copy-fragments": "cp frontend/fragments/try-header.html frontend/fragments/try-footer.html build/",
-    "build:concat": "cat build/try-header.html build/badge-examples-fragment.html build/try-footer.html > index.html",
-    "build": "npm run build:examples && npm run build:copy-fragments && npm run build:concat",
-    "build:production": "PRODUCTION_BUILD=true npm run build:examples && npm run build:copy-fragments && make footer-production-transform && npm run build:concat",
+    "frontend-depcheck": "check-node-version --node '>= 8.0'",
+    "server-depcheck": "check-node-version --node '>= 6.0'",
+    "postinstall": "npm run server-depcheck",
+    "prebuild": "npm run frontend-depcheck",
+    "build": "next build && next export -o build/",
     "heroku-postbuild": "npm run build",
-    "start": "concurrently --names server,frontend \"ALLOWED_ORIGIN=http://localhost:3000 node server 8080 ::\" \"BASE_URL=http://[::]:8080 next dev\""
+    "analyze": "ANALYZE=true PRODUCTION_BUILD=true BASE_URL=https://img.shields.io npm run build",
+    "start:server": "node server 8080 ::",
+    "prestart": "npm run frontend-depcheck",
+    "start": "concurrently --names server,frontend \"ALLOWED_ORIGIN=http://localhost:3000 npm run start:server\" \"BASE_URL=http://[::]:8080 next dev\""
   },
   "bin": {
     "badge": "lib/badge-cli.js"
@@ -79,6 +81,7 @@
   "devDependencies": {
     "@mapbox/react-click-to-select": "^2.0.1",
     "babel-eslint": "^8.0.2",
+    "check-node-version": "^2.1.0",
     "child-process-promise": "^2.2.1",
     "classnames": "^2.2.5",
     "concurrently": "^3.5.1",
@@ -102,7 +105,6 @@
     "is-svg": "^2.1.0",
     "lodash.debounce": "^4.0.8",
     "lodash.difference": "^4.5.0",
-    "lodash.mapvalues": "^4.6.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
@@ -122,8 +124,7 @@
     "rimraf": "^2.6.2",
     "sazerac": "^0.4.1",
     "semver-regex": "^1.0.0",
-    "sinon": "^4.0.1",
-    "universal-url": "^1.0.0"
+    "sinon": "^4.0.1"
   },
   "engines": {
     "node": "6.x",
