--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "prebuild": "npm run frontend-depcheck",
     "build": "next build && next export -o build/",
     "heroku-postbuild": "npm run build",
-    "analyze": "ANALYZE=true PRODUCTION_BUILD=true BASE_URL=https://img.shields.io npm run build",
+    "analyze": "ANALYZE=true LONG_CACHE=false BASE_URL=https://img.shields.io npm run build",
     "start:server": "node server 8080 ::",
     "prestart": "npm run frontend-depcheck",
     "start": "concurrently --names server,frontend \"ALLOWED_ORIGIN=http://localhost:3000 npm run start:server\" \"BASE_URL=http://[::]:8080 next dev\""
