Add harness for frontend tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ before_script:
 
 script:
   - npm run lint
-  - npm run test:js
+  - npm run test:js:server
+  - npm run test:js:frontend
   - if node_modules/.bin/check-node-version --node '< 8.0' > /dev/null; then echo "Skipping build."; else make website; fi
 
 jobs:
