Allow an absolute path for the BASE_URI

--- a/app.json
+++ b/app.json
@@ -14,6 +14,10 @@
     "NPM_CONFIG_PRODUCTION": {
       "description": "Configure whether devDependencies are installed (they are needed for the build).",
       "value": "false"
+    },
+    "BASE_URL": {
+      "description": "The base URL to use in the frontend build",
+      "value": "/"
     }
   },
   "formation": {
