--- a/package.json
+++ b/package.json
@@ -124,10 +124,11 @@
     "rimraf": "^2.6.2",
     "sazerac": "^0.4.2",
     "semver-regex": "^1.0.0",
-    "sinon": "^4.0.1"
+    "sinon": "^4.0.1",
+    "url-path": "^0.1.1"
   },
   "engines": {
-    "node": "6.x",
+    "node": "8.x",
     "npm": "5.x"
   }
 }
