Github auth admin endpoint and logging (#1267)
- Periodically log github auth information
    - Tokens are hashed which reduces the security risk inherent in the logs
        - A consistent hash is used so tokens can be correlated across the three data structures and across the three servers
- Add an admin endpoint for github auth information
    - Tokens are returned as-is to enable troubleshooting (e.g. comparing our reqRemaining to github’s)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "json-autosave": "~1.1.2",
     "jsonpath": "~0.2.12",
     "lodash.countby": "^4.6.0",
+    "lodash.mapkeys": "^4.6.0",
     "moment": "^2.19.3",
+    "node-env-flag": "^0.1.0",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
     "query-string": "^5.0.0",
@@ -113,7 +115,6 @@
     "mocha": "^4.0.1",
     "next": "^4.1.4",
     "nock": "^9.0.13",
-    "node-env-flag": "^0.1.0",
     "node-fetch": "^1.6.3",
     "nyc": "^11.2.1",
     "opn-cli": "^3.1.0",
