Updates from discussion in #1250

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "lodash.mapkeys": "^4.6.0",
     "moment": "^2.19.3",
     "node-env-flag": "^0.1.0",
-    "opencollective": "^1.0.3",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
     "query-string": "^5.0.0",
@@ -59,7 +58,7 @@
     "test": "npm run lint && npm run test:js:frontend && npm run test:js:server",
     "frontend-depcheck": "check-node-version --node '>= 8.0'",
     "server-depcheck": "check-node-version --node '>= 6.0 < 9.0'",
-    "postinstall": "npm run server-depcheck && opencollective postinstall",
+    "postinstall": "npm run server-depcheck",
     "prebuild": "npm run frontend-depcheck",
     "build": "next build && next export -o build/",
     "heroku-postbuild": "npm run build",
