Activating Open Collective (#1295)
See comments in #1250. Gratipay is shutting down.

--- a/package.json
+++ b/package.json
@@ -143,5 +143,10 @@
     "plugins": [
       "transform-class-properties"
     ]
+  },
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/shields",
+    "logo": "https://opencollective.com/opencollective/logo.txt"
   }
 }
