--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "test:services:pr:run": "mocha --delay service-tests/runner/cli.js --stdin < pull-request-services.log",
     "test:services:pr": "npm run test:services:pr:prepare && npm run test:services:pr:run",
     "test": "npm run lint && npm run test:js:frontend && npm run test:js:server",
-    "frontend-depcheck": "check-node-version --node '>= 8.0'",
-    "server-depcheck": "check-node-version --node '>= 6.0 < 9.0'",
+    "frontend-depcheck": "check-node-version --node \">= 8.0\"",
+    "server-depcheck": "check-node-version --node \">= 6.0 < 9.0\"",
     "postinstall": "npm run server-depcheck",
     "prebuild": "npm run frontend-depcheck",
     "build": "next build && next export -o build/",
