--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 
 node_js:
   - 8
-  - 9
+  # - 9
 
 cache:
   directories:
@@ -16,7 +16,7 @@ before_script:
 
 script:
   - npm run lint
-  - if node_modules/.bin/check-node-version --node '>= 9.0' > /dev/null; then echo "Skipping server tests."; else npm run test:js:server; fi
+  - npm run test:js:server
   - npm run test:js:frontend
   - npm run build
 
@@ -26,10 +26,10 @@ jobs:
       script:
       - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:services; fi
       - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:services:pr; fi
-    - node_js: 9
-      script:
-      - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:services; fi
-      - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:services:pr; fi
+    # - node_js: 9
+    #   script:
+    #   - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:services; fi
+    #   - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:services:pr; fi
 
 branches:
   except:
