--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
     "query-string": "^5.0.0",
-    "redis": "~2.8.0",
+    "redis": "~2.6.2",
     "request": "~2.83.0",
     "semver": "~5.4.1",
     "svgo": "~1.0.3",
@@ -131,6 +131,11 @@
     "semver-regex": "^1.0.0",
     "sinon": "^4.0.1",
     "url": "^0.11.0"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "redis"
+    ]
   },
   "engines": {
     "node": "8.x",
