--- a/package.json
+++ b/package.json
@@ -111,10 +111,11 @@
     "eslint-plugin-standard": "^3.0.1",
     "fetch-ponyfill": "^4.1.0",
     "glob": "^7.1.1",
-    "icedfrisby": "^1.4.0",
+    "icedfrisby": "2.0.0-alpha.1",
     "icedfrisby-nock": "^1.0.0",
     "is-png": "^1.1.0",
     "is-svg": "^2.1.0",
+    "joi": "^12.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.difference": "^4.5.0",
     "lodash.mapvalues": "^4.6.0",
