--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "build": "next build && next export -o build/",
     "heroku-postbuild": "npm run build",
     "analyze": "ANALYZE=true LONG_CACHE=false BASE_URL=https://img.shields.io npm run build",
-    "start:server": "node server 8080 ::",
+    "start:server": "RATE_LIMIT=false node server 8080 ::",
     "now-start": "node server",
     "prestart": "npm run frontend-depcheck",
     "start": "concurrently --names server,frontend \"ALLOWED_ORIGIN=http://localhost:3000 npm run start:server\" \"BASE_URL=http://[::]:8080 next dev\""
