add dynamic xml badge support

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "request": "~2.83.0",
     "semver": "~5.5.0",
     "svgo": "~0.7.1",
-    "xml2js": "~0.4.16"
+    "xml2js": "~0.4.16",
+    "xmldom": "~0.1.27",
+    "xpath": "~0.0.27"
   },
   "scripts": {
     "coverage:test:js": "nyc node_modules/mocha/bin/_mocha '*.spec.js' 'lib/**/*.spec.js' 'service-tests/**/*.spec.js'",
