--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint '**/*.js'",
     "danger": "danger",
-    "test:js:frontend": "mocha --require babel-polyfill --require babel-register 'frontend/**/*.spec.js'",
+    "test:js:frontend": "NODE_ENV=mocha mocha --require babel-polyfill --require babel-register 'frontend/**/*.spec.js'",
     "test:js:server": "mocha '*.spec.js' 'lib/**/*.spec.js' 'service-tests/**/*.spec.js'",
     "test:services": "mocha --delay service-tests/runner/cli.js",
     "test:services:pr:prepare": "node service-tests/runner/pull-request-services-cli.js > pull-request-services.log",
@@ -159,12 +159,18 @@
   },
   "babel": {
     "presets": [
-      "next/babel",
-      "env"
+      "next/babel"
     ],
     "plugins": [
       "transform-class-properties"
-    ]
+    ],
+    "env": {
+      "mocha": {
+        "presets": [
+          "env"
+        ]
+      }
+    }
   },
   "collective": {
     "type": "opencollective",
