--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "semver-regex": "^1.0.0",
     "sinon": "^4.0.1",
     "sinon-chai": "^3.0.0",
+    "snap-shot-it": "^4.0.1",
     "url": "^0.11.0"
   },
   "greenkeeper": {
