--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "coverage:test:js": "nyc node_modules/mocha/bin/_mocha '*.spec.js' 'lib/**/*.spec.js' 'services/**/*.spec.js'",
-    "coverage:test:services": "nyc node_modules/mocha/bin/_mocha --delay service-test-runner/cli.js",
+    "coverage:test:services": "nyc node_modules/mocha/bin/_mocha --delay lib/service-test-runner/cli.js",
     "coverage:test": "rimraf .nyc_output coverage; npm run coverage:test:js; npm run coverage:test:services",
     "coverage:report": "nyc report",
     "coverage:report:reopen": "opn coverage/lcov-report/index.html",
@@ -55,9 +55,9 @@
     "danger": "danger",
     "test:js:frontend": "NODE_ENV=mocha mocha --require babel-polyfill --require babel-register 'frontend/**/*.spec.js'",
     "test:js:server": "mocha '*.spec.js' 'lib/**/*.spec.js' 'services/**/*.spec.js'",
-    "test:services": "mocha --delay service-test-runner/cli.js",
-    "test:services:pr:prepare": "node service-test-runner/pull-request-services-cli.js > pull-request-services.log",
-    "test:services:pr:run": "mocha --delay service-test-runner/cli.js --stdin < pull-request-services.log",
+    "test:services": "mocha --delay lib/service-test-runner/cli.js",
+    "test:services:pr:prepare": "node lib/service-test-runner/pull-request-services-cli.js > pull-request-services.log",
+    "test:services:pr:run": "mocha --delay lib/service-test-runner/cli.js --stdin < pull-request-services.log",
     "test:services:pr": "npm run test:services:pr:prepare && npm run test:services:pr:run",
     "test": "npm run lint && npm run test:js:frontend && npm run test:js:server",
     "circle-images:build": "docker build -t shieldsio/shields-ci-node-8:${IMAGE_TAG} -f .circleci/images/node-8/Dockerfile . && docker build -t shieldsio/shields-ci-node-9:${IMAGE_TAG} -f .circleci/images/node-9/Dockerfile .",
