--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "lint": "eslint '**/*.js'",
     "danger": "danger",
     "test:js:frontend": "NODE_ENV=mocha mocha --require babel-polyfill --require babel-register 'frontend/**/*.spec.js'",
-    "test:js:server": "mocha '*.spec.js' 'lib/**/*.spec.js' 'services/**/*.spec.js' 'service-tests/**/*.spec.js'",
-    "test:services": "mocha --delay service-tests/runner/cli.js",
+    "test:js:server": "HANDLE_INTERNAL_ERRORS=false mocha '*.spec.js' 'lib/**/*.spec.js' 'services/**/*.spec.js' 'service-tests/**/*.spec.js'",
+    "test:services": "HANDLE_INTERNAL_ERRORS=false mocha --delay service-tests/runner/cli.js",
     "test:services:pr:prepare": "node service-tests/runner/pull-request-services-cli.js > pull-request-services.log",
-    "test:services:pr:run": "mocha --delay service-tests/runner/cli.js --stdin < pull-request-services.log",
+    "test:services:pr:run": "HANDLE_INTERNAL_ERRORS=false mocha --delay service-tests/runner/cli.js --stdin < pull-request-services.log",
     "test:services:pr": "npm run test:services:pr:prepare && npm run test:services:pr:run",
     "test": "npm run lint && npm run test:js:frontend && npm run test:js:server",
     "circle-images:build": "docker build -t shieldsio/shields-ci-node-8:${IMAGE_TAG} -f .circleci/images/node-8/Dockerfile . && docker build -t shieldsio/shields-ci-node-9:${IMAGE_TAG} -f .circleci/images/node-9/Dockerfile .",
@@ -69,7 +69,7 @@
     "build": "next build && next export -o build/",
     "heroku-postbuild": "npm run build",
     "analyze": "ANALYZE=true LONG_CACHE=false BASE_URL=https://img.shields.io npm run build",
-    "start:server": "RATE_LIMIT=false node server 8080 ::",
+    "start:server": "HANDLE_INTERNAL_ERRORS=false RATE_LIMIT=false node server 8080 ::",
     "now-start": "node server",
     "prestart": "npm run frontend-depcheck",
     "start": "concurrently --names server,frontend \"ALLOWED_ORIGIN=http://localhost:3000 npm run start:server\" \"BASE_URL=http://[::]:8080 next dev\""
