--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "jsonpath": "~1.0.0",
     "lodash.countby": "^4.6.0",
     "lodash.mapkeys": "^4.6.0",
+    "lodash.throttle": "^4.1.1",
     "lodash.uniq": "~4.5.0",
     "moment": "^2.19.3",
     "node-env-flag": "^0.1.0",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
     "query-string": "^6.0.0",
+    "raven": "^2.4.2",
     "redis": "~2.6.2",
     "request": "~2.85.0",
     "semver": "~5.5.0",
