--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   npm-install:
     docker:
-      - image: shieldsio/shields-ci-node-8:0.0.2
+      - image: shieldsio/shields-ci-node-8:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -33,7 +33,7 @@ jobs:
 
   main:
     docker:
-      - image: shieldsio/shields-ci-node-8:0.0.2
+      - image: shieldsio/shields-ci-node-8:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -63,9 +63,9 @@ jobs:
             CI_PULL_REQUEST: ''
           command: greenkeeper-lockfile-upload
 
-  main@node-9:
+  main@node-latest:
     docker:
-      - image: shieldsio/shields-ci-node-9:0.0.2
+      - image: shieldsio/shields-ci-node-latest:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -85,7 +85,7 @@ jobs:
 
   frontend:
     docker:
-      - image: shieldsio/shields-ci-node-8:0.0.2
+      - image: shieldsio/shields-ci-node-8:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -105,7 +105,7 @@ jobs:
 
   services-pr:
     docker:
-      - image: shieldsio/shields-ci-node-8:0.0.2
+      - image: shieldsio/shields-ci-node-8:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -137,9 +137,9 @@ jobs:
               echo 'This is not a pull request. Skipping.'
             fi
 
-  services-pr@node-9:
+  services-pr@node-latest:
     docker:
-      - image: shieldsio/shields-ci-node-9:0.0.2
+      - image: shieldsio/shields-ci-node-latest:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -173,7 +173,7 @@ jobs:
 
   services-daily:
     docker:
-      - image: shieldsio/shields-ci-node-8:0.0.2
+      - image: shieldsio/shields-ci-node-8:0.0.3
     working_directory: ~/repo
     steps:
       - checkout
@@ -197,7 +197,7 @@ workflows:
       - main:
           requires:
             - npm-install
-      - main@node-9:
+      - main@node-latest:
           requires:
             - npm-install
       - frontend:
@@ -206,7 +206,7 @@ workflows:
       - services-pr:
           requires:
             - npm-install
-      - services-pr@node-9:
+      - services-pr@node-latest:
           requires:
             - npm-install
 
