--- a/.circleci/images/node-latest/Dockerfile
+++ b/.circleci/images/node-latest/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:9
+FROM node:latest
 ADD .circleci/images/prepare-container.sh /root/prepare-container.sh
 RUN /root/prepare-container.sh
 RUN rm /root/prepare-container.sh
