Generalized rotating token pool (#1736)
This was designed as part of a rewrite of the Github auth code in #1205 which is stalled because I don't want to deploy it without access to server logs. The need for token rotation came up recently in #541, so I picked up this code, removed the github-specific bits, and pulled it in. Ordinarily I wouldn't merge helper code without a use, though sadly it seems like the best way to move forward this rewrite.

--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "lodash.countby": "^4.6.0",
     "lodash.mapkeys": "^4.6.0",
     "lodash.throttle": "^4.1.1",
+    "lodash.times": "^4.3.2",
     "lodash.uniq": "~4.5.0",
     "moment": "^2.19.3",
     "node-env-flag": "^0.1.0",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^5.0.0",
+    "priorityqueuejs": "^1.0.0",
     "query-string": "^6.0.0",
     "raven": "^2.4.2",
     "redis": "~2.6.2",
