update eslint enable `object-curly-spacing`
https://eslint.org/docs/rules/object-curly-spacing

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -26,3 +26,4 @@ rules:
   # We keep whitespace cleaned up.
   no-trailing-spaces: "error"
   eol-last: "error"
+  object-curly-spacing: ["error", "always"]
