--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "coverage:report:reopen": "opn coverage/lcov-report/index.html",
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint \"**/*.js\"",
+    "prettier": "prettier --write '*.js' 'lib/**/*.js' 'frontend/**/*.js' 'pages/**/*.js' 'services/**/*.js'",
+    "prettier-check": "prettier-check '*.js' 'lib/**/*.js' 'frontend/**/*.js' 'pages/**/*.js' 'services/**/*.js'",
     "danger": "danger",
     "test:js:frontend": "NODE_ENV=mocha mocha --require babel-polyfill --require babel-register \"frontend/**/*.spec.js\"",
     "test:js:server": "HANDLE_INTERNAL_ERRORS=false mocha \"*.spec.js\" \"lib/**/*.spec.js\" \"services/**/*.spec.js\"",
@@ -123,7 +125,6 @@
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^7.0.0",
-    "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
@@ -145,6 +146,7 @@
     "nyc": "^12.0.1",
     "opn-cli": "^3.1.0",
     "prettier": "1.14.0",
+    "prettier-check": "^2.0.0",
     "pretty": "^2.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
