--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "coverage:report:reopen": "opn coverage/lcov-report/index.html",
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint \"**/*.js\"",
-    "prettier": "prettier --write '*.js' 'lib/**/*.js' 'frontend/**/*.js' 'pages/**/*.js' 'services/**/*.js'",
-    "prettier-check": "prettier-check '*.js' 'lib/**/*.js' 'frontend/**/*.js' 'pages/**/*.js' 'services/**/*.js'",
+    "prettier": "prettier --write \"**/*.js\"",
+    "prettier-check": "prettier-check \"**/*.js\"",
     "danger": "danger",
     "test:js:frontend": "NODE_ENV=mocha mocha --require babel-polyfill --require babel-register \"frontend/**/*.spec.js\"",
     "test:js:server": "HANDLE_INTERNAL_ERRORS=false mocha \"*.spec.js\" \"lib/**/*.spec.js\" \"services/**/*.spec.js\"",
